gobmkida/c1/do_genmove
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/genmove.c:751:10: error: conflicting types for 'do_genmove'
__int64  do_genmove( int *move, int color, float pure_threat_value, int *allowed_moves, double a5, float a6) 
         ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/genmove.c:40:12: note: previous declaration is here
static int do_genmove(int *move, int color, float pure_threat_value,
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/genmove.c:772:12: error: expected expression
*( _OWORD *)&stats.nodes = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/genmove.c:772:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&stats.nodes = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/genmove.c:802:4: error: member reference base type '__m128' (vector of 4 'float' values) is not a structure or union
v10.m128_i32[0] = 0; 
~~~^~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/genmove.c:808:21: error: invalid conversion between vector type '__m128' (vector of 4 'float' values) and integer type 'uint32' (aka 'unsigned int') of different size
v13 = _mm_cmplt_ss( ( __m128)LODWORD( lower_bound), v10); 
                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/genmove.c:809:41: error: invalid conversion between vector type '__m128' (vector of 4 'float' values) and integer type 'uint32' (aka 'unsigned int') of different size
v14 = COERCE_FLOAT( _mm_andnot_ps( v13, ( __m128)LODWORD( lower_bound)).m128_u32[0] | COERCE_UNSIGNED_INT( -lower_bound) & v13.m128_i32[0]); 
                                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/genmove.c:809:127: error: member reference base type '__m128' (vector of 4 'float' values) is not a structure or union
v14 = COERCE_FLOAT( _mm_andnot_ps( v13, ( __m128)LODWORD( lower_bound)).m128_u32[0] | COERCE_UNSIGNED_INT( -lower_bound) & v13.m128_i32[0]); 
                                                                                                                           ~~~^~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/genmove.c:818:21: error: invalid conversion between vector type '__m128' (vector of 4 'float' values) and integer type 'uint32' (aka 'unsigned int') of different size
v20 = _mm_cmplt_ss( ( __m128)LODWORD( upper_bound), v10); 
                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/genmove.c:824:35: error: invalid conversion between vector type '__m128' (vector of 4 'float' values) and integer type 'uint32' (aka 'unsigned int') of different size
COERCE_FLOAT( _mm_andnot_ps( v20, ( __m128)LODWORD( upper_bound)).m128_u32[0] | COERCE_UNSIGNED_INT( -upper_bound) & v20.m128_i32[0])); 
                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/genmove.c:824:121: error: member reference base type '__m128' (vector of 4 'float' values) is not a structure or union
COERCE_FLOAT( _mm_andnot_ps( v20, ( __m128)LODWORD( upper_bound)).m128_u32[0] | COERCE_UNSIGNED_INT( -upper_bound) & v20.m128_i32[0])); 
                                                                                                                     ~~~^~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/genmove.c:889:79: error: too many arguments to function call, expected 6, have 7
if ( review_move_reasons( move, &v22, color, v23, lower_bound, allowed_moves, a6) && verbose ) 
     ~~~~~~~~~~~~~~~~~~~                                                      ^~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/liberty.h:530:1: note: 'review_move_reasons' declared here
int review_move_reasons(int *move, float *val, int color,
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/genmove.c:896:59: error: too many arguments to function call, expected 2, have 3
if ( ( unsigned int)revise_thrashing_dragon( color, 15.0, *( float *)&v16) ) 
                    ~~~~~~~~~~~~~~~~~~~~~~~               ^~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/genmove.c:57:1: note: 'revise_thrashing_dragon' declared here
static int revise_thrashing_dragon(int color, float advantage);
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/genmove.c:902:73: error: too many arguments to function call, expected 6, have 7
if ( review_move_reasons( move, &v22, color, v23, score, allowed_moves, a6) && verbose ) 
     ~~~~~~~~~~~~~~~~~~~                                                ^~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/liberty.h:530:1: note: 'review_move_reasons' declared here
int review_move_reasons(int *move, float *val, int color,
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/genmove.c:913:73: error: too many arguments to function call, expected 6, have 7
if ( review_move_reasons( move, &v22, color, v23, score, allowed_moves, a6) && verbose ) 
     ~~~~~~~~~~~~~~~~~~~                                                ^~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/liberty.h:530:1: note: 'review_move_reasons' declared here
int review_move_reasons(int *move, float *val, int color,
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/genmove.c:922:58: error: too many arguments to function call, expected 2, have 3
if ( ( unsigned int)revise_thrashing_dragon( color, 0.0, *( float *)&v16) || revise_semeai( color) ) 
                    ~~~~~~~~~~~~~~~~~~~~~~~              ^~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/genmove.c:57:1: note: 'revise_thrashing_dragon' declared here
static int revise_thrashing_dragon(int color, float advantage);
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/genmove.c:927:73: error: too many arguments to function call, expected 6, have 7
if ( review_move_reasons( move, &v22, color, v23, score, allowed_moves, a6) ) 
     ~~~~~~~~~~~~~~~~~~~                                                ^~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/liberty.h:530:1: note: 'review_move_reasons' declared here
int review_move_reasons(int *move, float *val, int color,
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/genmove.c:941:30: error: too many arguments to function call, expected 2, have 3
record_top_move( *move, v22, *( float *)&v16); 
~~~~~~~~~~~~~~~              ^~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/liberty.h:456:1: note: 'record_top_move' declared here
void record_top_move(int move, float val);
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/genmove.c:942:30: error: too many arguments to function call, expected 2, have 3
move_considered( *move, v22, *( float *)&v16); 
~~~~~~~~~~~~~~~              ^~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/liberty.h:675:1: note: 'move_considered' declared here
void move_considered(int move, float value);
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/genmove.c:964:30: error: too many arguments to function call, expected 2, have 3
record_top_move( *move, v22, *( float *)&v16); 
~~~~~~~~~~~~~~~              ^~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/liberty.h:456:1: note: 'record_top_move' declared here
void record_top_move(int move, float val);
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/genmove.c:965:30: error: too many arguments to function call, expected 2, have 3
move_considered( *move, v22, *( float *)&v16); 
~~~~~~~~~~~~~~~              ^~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/liberty.h:675:1: note: 'move_considered' declared here
void move_considered(int move, float value);
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/genmove.c:986:30: error: too many arguments to function call, expected 2, have 3
move_considered( *move, v22, *( float *)&v16); 
~~~~~~~~~~~~~~~              ^~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/engine/liberty.h:675:1: note: 'move_considered' declared here
void move_considered(int move, float value);
^
21 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_genmove/src/obj/1/genmove.o] Error 1
